--- a/src/style.css
+++ b/src/style.css
@@ -757,6 +757,14 @@ h3 {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.collapse {
+  visibility: collapse;
+}
+
 .absolute {
   position: absolute;
 }
@@ -954,6 +962,10 @@ h3 {
   height: 2rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-\[18px\] {
   height: 18px;
 }
@@ -984,6 +996,10 @@ h3 {
 
 .h-9 {
   height: 2.25rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-full {
@@ -1017,6 +1033,10 @@ h3 {
 
 .w-4\/5 {
   width: 80%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-\[18px\] {
@@ -1226,6 +1246,11 @@ h3 {
   background-color: rgb(242 247 254 / var(--tw-bg-opacity));
 }
 
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
@@ -1259,6 +1284,11 @@ h3 {
 .bg-\[\#20202D\] {
   --tw-bg-opacity: 1;
   background-color: rgb(32 32 45 / var(--tw-bg-opacity));
+}
+
+.bg-lime-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 249 157 / var(--tw-bg-opacity));
 }
 
 .bg-hero {
@@ -1439,6 +1469,14 @@ h3 {
   line-height: 1rem;
 }
 
+.text-\[15px\] {
+  font-size: 15px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .font-\[500\] {
   font-weight: 500;
 }
@@ -1513,6 +1551,10 @@ h3 {
   color: rgb(32 32 45 / var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1548,6 +1590,10 @@ h3 {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.hover\:invisible:hover {
+  visibility: hidden;
 }
 
 .hover\:block:hover {
@@ -1600,8 +1646,52 @@ h3 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.peer:target ~ .peer-target\:visible {
+  visibility: visible;
+}
+
+.peer:checked ~ .peer-checked\:visible {
+  visibility: visible;
+}
+
+.peer:checked ~ .peer-checked\:invisible {
+  visibility: hidden;
+}
+
+.peer:checked ~ .peer-checked\:h-20 {
+  height: 5rem;
+}
+
+.peer:checked ~ .peer-checked\:w-20 {
+  width: 5rem;
+}
+
+.peer:checked ~ .peer-checked\:scale-105 {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.peer:checked ~ .peer-checked\:bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.peer:hover ~ .peer-hover\:visible {
+  visibility: visible;
+}
+
 .peer:hover ~ .peer-hover\:block {
   display: block;
+}
+
+.peer:focus ~ .peer-focus\:visible {
+  visibility: visible;
 }
 
 .peer:focus ~ .peer-focus\:block {
@@ -1706,11 +1796,6 @@ h3 {
     gap: 5rem;
   }
 
-  .sm\:bg-red-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-  }
-
   .sm\:text-center {
     text-align: center;
   }
@@ -1723,37 +1808,12 @@ h3 {
 }
 
 @media (min-width: 768px) {
-  .md\:static {
-    position: static;
-  }
-
   .md\:block {
     display: block;
   }
 
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:flex-row {
@@ -1762,27 +1822,6 @@ h3 {
 
   .md\:justify-between {
     justify-content: space-between;
-  }
-
-  .md\:gap-8 {
-    gap: 2rem;
-  }
-
-  .md\:bg-purple-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(233 213 255 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-transparent {
-    background-color: transparent;
-  }
-
-  .md\:text-left {
-    text-align: left;
-  }
-
-  .md\:font-normal {
-    font-weight: 400;
   }
 }
 
@@ -1917,6 +1956,10 @@ h3 {
     width: 33.333333%;
   }
 
+  .lg\:w-full {
+    width: 100%;
+  }
+
   .lg\:w-2\/3 {
     width: 66.666667%;
   }
@@ -1989,11 +2032,6 @@ h3 {
   .lg\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .lg\:bg-lime-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(217 249 157 / var(--tw-bg-opacity));
   }
 
   .lg\:py-3 {
@@ -2079,12 +2117,5 @@ h3 {
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:bg-sky-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(186 230 253 / var(--tw-bg-opacity));
   }
 }
